--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Discord Webhook Sender</title>
+  <title>discord sebhook sender</title>
   <style>
     * {
       box-sizing: border-box;
@@ -200,4 +200,4 @@
     }
   </script>
 </body>
-</html>
+</html></html>
